# reddit-or-replicant

./: deploy.sh  hello.py  pyproject.toml
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .gitignore  CLAUDE_CONTEXT.md  evaluate_comments.py  fly.toml  generate_mixed_comments.py  hello.py  mixed-comments.json  pyproject.toml  reddit_fetcher.py  reddit_parser.py  run-dev.sh  server.py  test-reddit.json  test_single_eval.py  test_turso.py
backend/src/: __init__.py  comment_archetypes.py  database.py  generate_mixed_comments.py  reddit_fetcher.py  reddit_parser.py
backend/static/.vite/: manifest.json
backend/static/_app/: version.json
backend/static/_app/immutable/assets/: 0.CrVDAuu-.css
backend/static/_app/immutable/chunks/: B0RP_nXW.js  BOe3PIrR.js  C6oE0YpH.js  CI6f0tGy.js  CSL_G-ra.js  CZ6qWho8.js  Czs3uoK7.js  D0dqcScj.js  D8J5l3fY.js  DFvihwEc.js  DjEdHHdZ.js  cu_vdabb.js
backend/static/_app/immutable/entry/: app.BEUBnavL.js  start.C0cw8wqd.js
backend/static/_app/immutable/nodes/: 0.9Hyz5CGh.js  1.CTN2EcA5.js  2.CyJykZlw.js  3.BooMGvSh.js  4.CKSDsq3Q.js  5.BGKf__8Z.js  6.JAUtuRah.js  7.DPjU4Cny.js  8.Dc8nhM6b.js
backend/templates/: index.html
frontend/: fly.toml  package.json  pnpm-lock.yaml
frontend/src/: app.css
frontend/src/lib/: admin.ts  config.ts  environment.ts  user.ts
frontend/src/lib/components/: DatabaseSelector.svelte  HowToPlayDialog.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/admin/: +page.svelte
(+6 files in other folders)
