[project]
name = "replicant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
    "anthropic>=0.40.0",
    "faker>=30.8.2",
    "python-dotenv>=1.1.1",
]
